--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,13 +1,13 @@
 <ion-view view-title="Login" align-title="left">
     <ion-content>
-        <div style="width:100%; height:100%; position: absolute; background: url(img/login.jpg) center; background-size: cover;">
-            <div style="width: 100%;height: 100%;background-size: cover;background-color: #000;opacity: 0.8;">
+        <div style="width:100%; height:100%; position: absolute;">
+            <div style="width: 100%;height: 100%;background-size: cover;background-color: #fff;opacity: 1;">
             </div>
         </div>
         <div class="hero no-header flat">
             <div class="content">
                 <div class="app-icon"></div>
-                <h1>OWLY</h1>
+                <h1> </h1>
             </div>
         </div>
 
