--- a/www/css/style.css
+++ b/www/css/style.css
@@ -26,6 +26,11 @@ p {
 
 /* Menu
 ==================================*/
+
+.hero>.content {
+    top: 28px;
+}
+
 .menu .bar.bar-header.expanded {
     transition: all .5s ease-in-out;
 }
@@ -67,10 +72,10 @@ p {
     background-color: #fff;
     background: url('../img/crown.jpg') center;
     background-size: cover;
-    border-radius: 50%;
-    height: 125px;
+    /*border-radius: 50%;*/
+    height: 200px;
     margin: 0 auto;
-    width: 125px;
+    width: 300px;
 }
 
 .social-login {
@@ -121,10 +126,10 @@ p {
 
 .list input {
     background-color: transparent;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #163c6a;
     width: 98%;
     margin: 1% !important;
-    color: white;
+    color: #163c6a;
 }
 .header-item input {
     background-color: transparent;
@@ -150,13 +155,13 @@ input:-ms-input-placeholder {
 /* anchor link*/
 a, :focus, a:focus, a:active, a:hover, button:focus, button:active, button:hover {
     outline: 0px none;
-    color: #999;
+    color: #163c6a;
 }
 
 .button.button-assertive {
     border-color: #999;
-    background-color: #333;
-    color: #999;
+    background-color: #163c6a;
+    color: #fff;
 }
 
 .assertive-900-bg, .assertive-900-bg.activated, .assertive-900-bg:active, .assertive-900-bg:hover, .assertive-900-border, .assertive-900-border.activated, .assertive-900-border:active, .assertive-900-border:hover, .bar .button-assertive-900, .bar .button-assertive-900.activated, .bar .button-assertive-900:active, .bar .button-assertive-900:hover, .bar-assertive-900, .bar-assertive-900.activated, .bar-assertive-900:active, .bar-assertive-900:hover, .button-assertive-900, .button-assertive-900.activated, .button-assertive-900:active, .button-assertive-900:hover, .button-bar-assertive-900, .button-bar-assertive-900.activated, .button-bar-assertive-900:active, .button-bar-assertive-900:hover, .header-assertive-900, .header-assertive-900.activated, .header-assertive-900:active, .header-assertive-900:hover{
