--- a/www/css/style.css
+++ b/www/css/style.css
@@ -65,6 +65,11 @@ p {
     content: "\f2ca";
 }
 
+.item p {
+    color: rgba(238, 12, 12, 0.37);
+    font-size: 13px;
+    margin-bottom: 2px;
+}
 
 /* Login
 ==================================*/
@@ -88,7 +93,7 @@ p {
                         custom css
 *************************************************************/
 .pane, .view {
-    background-color: #444;
+    background-color: #fff;
 }
 
 .bar .button.back-button {
@@ -133,9 +138,9 @@ p {
 }
 .header-item input {
     background-color: transparent;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #fff;
     width: 98%;
-    color: #999;
+    color: #fff;
     margin: 0 0 0 4px !important;
     padding: 0px !important;
 }
@@ -165,11 +170,21 @@ a, :focus, a:focus, a:active, a:hover, button:focus, button:active, button:hover
 }
 
 .assertive-900-bg, .assertive-900-bg.activated, .assertive-900-bg:active, .assertive-900-bg:hover, .assertive-900-border, .assertive-900-border.activated, .assertive-900-border:active, .assertive-900-border:hover, .bar .button-assertive-900, .bar .button-assertive-900.activated, .bar .button-assertive-900:active, .bar .button-assertive-900:hover, .bar-assertive-900, .bar-assertive-900.activated, .bar-assertive-900:active, .bar-assertive-900:hover, .button-assertive-900, .button-assertive-900.activated, .button-assertive-900:active, .button-assertive-900:hover, .button-bar-assertive-900, .button-bar-assertive-900.activated, .button-bar-assertive-900:active, .button-bar-assertive-900:hover, .header-assertive-900, .header-assertive-900.activated, .header-assertive-900:active, .header-assertive-900:hover{
-    background-color: #222;
+    background-color: #6c963f;
     color: #FFF;
+    box-shadow: none;
 }
+
+.bar .button-energized-900, .bar .button-energized-900.activated, .bar .button-energized-900:active, .bar .button-energized-900:hover, .bar-energized-900, .bar-energized-900.activated, .bar-energized-900:active, .bar-energized-900:hover, .button-bar-energized-900, .button-bar-energized-900.activated, .button-bar-energized-900:active, .button-bar-energized-900:hover, .button-energized-900, .button-energized-900.activated, .button-energized-900:active, .button-energized-900:hover, .energized-900-bg, .energized-900-bg.activated, .energized-900-bg:active, .energized-900-bg:hover, .energized-900-border, .energized-900-border.activated, .energized-900-border:active, .energized-900-border:hover, .header-energized-900, .header-energized-900.activated, .header-energized-900:active, .header-energized-900:hover {
+    color: #6c963f;
+}
+
+.item-avatar>img:first-child {
+    box-shadow: 0px 0px 4px 0px rgb(108, 150, 63);
+}
+
 .item h2 {
-    color: #ff9;
+    color: #163c6a;
 }
 
 
