--- a/www/templates/gallery.html
+++ b/www/templates/gallery.html
@@ -5,7 +5,7 @@
         <div style="height:40px">&nbsp;</div>
         <div class="row responsive-sm">                
             <div class="col col-50" style="margin: 0px;" ng-repeat="item in food_details">
-                <ngcart-addtocart id="{{item.id}}" name="{{item.name}}" price="{{item.price}}" quantity="1" quantity-max="5"><img ng-src="{{item.face}}" width="100%"/>
+                <ngcart-addtocart id="{{item.id}}" name="{{item.name}}" price="{{item.price}}" quantity="1" quantity-max="5"><!-- <img ng-src="{{item.face}}" width="100%"/> -->
 
                     <div class="" style="position: relative;
                             font-size: 18px;
@@ -25,7 +25,7 @@
 </ion-view>
 
 <script type="text/ng-template" id="template/ngCart/addtocart.html">
-<div ng-show="attrs.id" style="position: relative; border: 6px solid #222;background-color: #222; border-radius: 4px;">
+<div ng-show="attrs.id" style="position: relative; border: 6px solid #163c6a;background-color: #163c6a; border-radius: 4px;">
     <div style="position: relative;">
         
         <a class="btn btn-sm btn-primary"
@@ -33,7 +33,7 @@
            ng-transclude></a>
     </div>
 <div>
-<button id="fab-profile" class="button button-fab" nav-view="active" ng-style="inCart()?{
+<button id="fab-profile" class="button button-fab" ng-hide="true" nav-view="active" ng-style="inCart()?{
     '-moz-transform': 'rotate(45deg)',
     '-webkit-transform': 'rotate(45deg)',
     '-o-transform': 'rotate(45deg)',
