--- a/www/templates/hotels-list.html
+++ b/www/templates/hotels-list.html
@@ -7,6 +7,7 @@
                        <!--   <img src="http://localhost:8080/{{m.imageUrl}}">-->
                         <img src="{{m.imageUrl}}">
                         <h2>{{m.title}}</h2>
+                        <p>{{m.tag}}</p>
                     </a>
                 </div>
             </div>
